revamped to 375px

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<img src="./styles/images/desktop/image-interactive.jpg" alt="" />
 					</div>
 					<div class="content-box">
-						<h2>The leader in unteractive VR</h2>
+						<h2>The leader in interactive VR</h2>
 						<p>
 							Founded in 2011, Loopstudios has been producing world-class
 							virtual reality projects for some of the best companies around the
