--- a/index.html
+++ b/index.html
@@ -242,6 +242,12 @@
 					<p class="copyright">&copy; 2021 Loopstudios. All rights reserved.</p>
 				</div>
 			</footer>
+			<div class="attribution">
+				Challenge by
+				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+					>Frontend Mentor</a
+				>. Coded by <a href="https://github.com/Taiyeagboola">Taiye Agboola</a>.
+			</div>
 		</div>
 		<script src="./script/app.js"></script>
 	</body>
